# Qombat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Build.yml  BuildAndTest.yml  Coverage.yml  LinuxDebugBuild.yml  LinuxReleaseBuild.yml  cmake.yml
CMake/: CodeCoverage.cmake
Editor/: CMakeLists.txt
Editor/Source/: Editor.cpp
Editor/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Editor/Source/ImGui/GLFW/: ImGuiGLFW.cpp  ImGuiGLFW.hpp
Editor/Source/ImGui/OpenGL/: ImGuiOpenGL.cpp  ImGuiOpenGL.hpp
Editor/Source/ImGui/Utility/: Colors.cpp  Colors.hpp  Draw.hpp  Geometry.hpp  Mouse.hpp
Editor/Source/Panels/: PanelManager.cpp  PanelManager.hpp  ProfilerPanel.cpp  ProfilerPanel.hpp  TestPanel.cpp  TestPanel.hpp
Engine/: CMakeLists.txt
Engine/Include/Qombat/: Core.hpp  Events.hpp  Input.hpp  Tests.hpp  Utility.hpp
Engine/Source/: QMBT.hpp  QMBTPCH.hpp
Engine/Source/Compatibility/: DebugBreak.hpp  PlatformDetection.hpp
Engine/Source/Core/: Aliases.hpp  Application.cpp  Application.hpp  Asserts.hpp  Collections.hpp  Console.hpp  Core.cpp  Core.hpp  CoreConfig.cpp  CoreConfig.hpp  EntryPoint.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Macros.hpp  Testing.hpp  TimeStep.hpp
Engine/Source/Core/Compatibility/: PlatformDetection.hpp  PrettyFunction.hpp
Engine/Source/Core/Configuration/: ConfigManager.cpp  ConfigManager.hpp  Configuration.hpp
Engine/Source/Core/EntryPoint/: EntryPoint.hpp
Engine/Source/Core/Logging/: Console.cpp  Console.hpp  LogManager.hpp  Logger.cpp  Logger.hpp
Engine/Source/Core/Memory/: AllocatorData.hpp  FreeListAllocator.cpp  FreeListAllocator.hpp  MemoryManager.cpp  MemoryManager.hpp  PoolAllocator.cpp  PoolAllocator.hpp  PoolAllocatorBlocked.hpp  ResizablePoolAllocator.hpp  STLAllocator.cpp  STLAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp  VectorAllocator.cpp  VectorAllocator.hpp  VectorAllocatorGlobal.cpp  VectorAllocatorGlobal.hpp
Engine/Source/Core/Memory/Utility/: MemoryUtils.hpp
Engine/Source/Core/Types/: Array.hpp  BasicVector.hpp  SharedPtr.hpp  SinglyLinkedList.hpp  String.hpp  UniquePtr.hpp  UnorderedMap.hpp  Vector.hpp
Engine/Source/Debug/: Instrumentation.hpp
Engine/Source/Display/: Window.hpp
Engine/Source/Display/Linux/: LinuxWindow.cpp  LinuxWindow.hpp
Engine/Source/Events/: ApplicationEvent.hpp  Events.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/Source/Input/: Input.hpp  KeyCodes.cpp  KeyCodes.hpp  MouseCodes.hpp
Engine/Source/Input/Linux/: LinuxInput.cpp
Engine/Source/Platform/OS/Linux/: LinuxWindow.cpp  LinuxWindow.hpp
Engine/Source/Platform/OS/Windows/: WindowsWindow.hpp
Engine/Source/Platform/RenderAPIs/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp
Engine/Source/Rendering/: GraphicsContext.hpp
Engine/Source/Utility/: Enums.hpp  Hashing.hpp  Random.hpp  Size.hpp  Strings.hpp  Types.hpp
Engine/src/Core/: Application.cpp  EntryPoint.hpp
Tests/: CMakeLists.txt
Tests/Source/: AlignmentTest.cpp  ConfigurationTest.cpp  FreeListAllocatorTest.cpp  Main.cpp  MemoryTestObjects.hpp  MockApplication.cpp  MockApplication.hpp  PoolAllocatorBlockedTest.cpp  PoolAllocatorTest.cpp  ResizablePoolAllocatorTest.cpp  STLAllocatorTest.cpp  SharedPtrTest.cpp  StackAllocatorTest.cpp  Test.cpp  TypesUtilityTest.cpp  VectorAllocatorTest.cpp
